# bblibc

./: .travis.yml  CMakeLists.txt  README.md  travis.sh
src/: CMakeLists.txt  bbstdlib.h  main.asm  main.c  print.c  stddef.h  stdlib.h
tests/: CMakeLists.txt  runtest.py  runtest.sh
tests/argv/: main.c  t1.yaml  t2.yaml
tests/envp/: main.c  t1.yaml  t2.yaml  t3.yaml
tests/hello/: main.c  t1.yaml
